tests/spec/pass/channel_buffered_blocking.aja
fuc producer(ch: chan[int]) -> void:
    send(ch, 1)
    send(ch, 2)

ch = chan(1)
kostroutine producer(ch)
a = recv(ch)
b = recv(ch)
waitAll()
print(a + b)
