tests/spec/fail/generic_list_wrong_arity.aja
fuc bad(nums: list[int, int]) -> void:
    return
